--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deliveryscardapio",
+  "name": "cardapio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.1"
   }
 }
